--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "browser-sync": "^2.11.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.4",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-front-matter": "^1.3.0",
     "gulp-header": "^1.7.1",
     "gulp-htmlmin": "^1.3.0",
-    "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
@@ -25,14 +23,11 @@
     "gulp-wait": "0.0.2",
     "gulpsmith": "^0.5.5",
     "handlebars": "^4.0.5",
-    "imagemin-jpegoptim": "^4.1.0",
-    "imagemin-pngquant": "^4.2.2",
     "lodash.assign": "^4.0.8",
     "lost": "^6.7.2",
     "metalsmith": "^2.1.0",
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown-remarkable": "^0.1.1",
-    "metalsmith-permalinks": "^0.5.0",
     "run-sequence": "^1.1.5"
   },
   "scripts": {
@@ -40,12 +35,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kennethwang14/KennethStarterKit.git"
+    "url": "git+https://github.com/kennethwang14/LucidCSS"
   },
   "author": "Kenneth Wang",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kennethwang14/KennethStarterKit/issues"
+    "url": "https://github.com/kennethwang14/LucidCSS/issues"
   },
-  "homepage": "https://github.com/kennethwang14/KennethStarterKit#readme"
+  "homepage": "https://github.com/kennethwang14/LucidCSS#readme"
 }
